navigation jump is fixed

--- a/style/main.css
+++ b/style/main.css
@@ -369,7 +369,7 @@ header {
   width: 100%;
   font-size: 14px;
   z-index: 200;
-  padding: 30px 0 15px 0;
+  padding: 15px 0 15px 0;
   font-weight: 100px; }
 
 #menu {
